# tera-aws

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: ec2.rs  imds.rs  main.rs  secretsmanager.rs
