[package]
name = "tera-aws"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aws-config = "0.0.25-alpha"
aws-sdk-ec2 = "0.0.25-alpha"
aws-sdk-secretsmanager = "0.0.25-alpha"
aws-types = "0.0.25-alpha"
color-eyre = "0.5"
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
tempfile = "3"
tera = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
